/*
 * Copyright 2020 Intel Corporation, Inc
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

service installapp {
    // Sync
    rpc InstallApp(InstallAppRequest) returns (InstallAppResponse) {
    }

    rpc UninstallApp(UninstallAppRequest) returns (UninstallAppResponse) {
    }
}

message InstallAppRequest {
    string app_context = 1;
}

message InstallAppResponse {
    bool app_context_installed = 1;
    string app_context_install_message = 2;
}

message UninstallAppRequest {
    string app_context = 1;
}

message UninstallAppResponse {
    bool app_context_uninstalled = 1;
    string app_context_uninstall_message = 2;
}

